--- a/app/src/main/res/layout-land/content_course_edit.xml
+++ b/app/src/main/res/layout-land/content_course_edit.xml
@@ -153,102 +153,302 @@
         </LinearLayout>
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/mentor_text_description_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:layout_marginEnd="@dimen/activity_margin_small"
-        android:text="@string/course_mentor"
-        android:textSize="@dimen/text_size_editor"
-        app:layout_constraintTop_toBottomOf="@id/course_status_term_layout" />
-
 
     <LinearLayout
-        android:id="@+id/course_mentor_name_layout"
+        android:id="@+id/course_edit_mentor_1_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginEnd="@dimen/activity_margin_small"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        android:baselineAligned="false"
-        app:layout_constraintTop_toBottomOf="@id/mentor_text_description_1">
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/course_status_term_layout">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/mentor_input_first_name_layout"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/mentor_text_description_1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:errorEnabled="false">
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:text="@string/course_mentor"
+            android:textSize="@dimen/text_size_editor" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/mentor_input_first_name"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/first_name"
-                android:inputType="textCapWords" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/mentor_input_last_name_layout"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/course_mentor_name_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:errorEnabled="false">
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/mentor_input_last_name"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_input_first_name_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:errorEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_input_first_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/first_name"
+                    android:inputType="textCapWords" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_input_last_name_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:errorEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_input_last_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/last_name"
+                    android:inputType="textCapWords" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/course_mentor_contact_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:orientation="horizontal">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_input_phone_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/last_name"
-                android:inputType="textCapWords" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:errorEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_input_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/phone_number"
+                    android:inputType="phone" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_input_email_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:errorEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_input_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/email_address"
+                    android:inputType="textEmailAddress" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
     </LinearLayout>
 
-
     <LinearLayout
-        android:id="@+id/course_mentor_contact_layout"
+        android:id="@+id/course_edit_mentor_2_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_small"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:layout_marginEnd="@dimen/activity_margin_small"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/course_mentor_name_layout">
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/course_edit_mentor_1_layout">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/mentor_input_phone_layout"
+        <TextView
+            android:id="@+id/mentor_text_description_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:errorEnabled="false">
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:text="@string/course_mentor_2"
+            android:textSize="@dimen/text_size_editor" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/mentor_input_phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/phone_number"
-                android:inputType="phone" />
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/mentor_input_email_layout"
+        <LinearLayout
+            android:id="@+id/course_mentor_2_name_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:errorEnabled="false">
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/mentor_input_email"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_2_input_first_name_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:errorEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_2_input_first_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/first_name"
+                    android:inputType="textCapWords" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_2_input_last_name_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:errorEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_2_input_last_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/last_name"
+                    android:inputType="textCapWords" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/course_mentor_2_contact_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:orientation="horizontal">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_2_input_phone_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/email_address"
-                android:inputType="textEmailAddress" />
+                android:layout_weight="1"
+                app:errorEnabled="false">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_2_input_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/phone_number"
+                    android:inputType="phone" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_2_input_email_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:errorEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_2_input_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/email_address"
+                    android:inputType="textEmailAddress" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/course_edit_mentor_3_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/course_edit_mentor_2_layout">
+
+        <TextView
+            android:id="@+id/mentor_text_description_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:text="@string/course_mentor_3"
+            android:textSize="@dimen/text_size_editor" />
+
+        <LinearLayout
+            android:id="@+id/course_mentor_3_name_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_3_input_first_name_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:errorEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_3_input_first_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/first_name"
+                    android:inputType="textCapWords" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_3_input_last_name_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:errorEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_3_input_last_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/last_name"
+                    android:inputType="textCapWords" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/course_mentor_3_contact_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_margin_small"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:layout_marginEnd="@dimen/activity_margin_small"
+            android:orientation="horizontal">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_3_input_phone_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:errorEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_3_input_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/phone_number"
+                    android:inputType="phone" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/mentor_3_input_email_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:errorEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/mentor_3_input_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/email_address"
+                    android:inputType="textEmailAddress" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
