--- a/app/src/main/res/menu/menu_assessment_edit.xml
+++ b/app/src/main/res/menu/menu_assessment_edit.xml
@@ -11,9 +11,8 @@
 
     <item
         android:id="@+id/action_delete_assessment_edit"
-        android:icon="@drawable/ic_delete"
         android:orderInCategory="101"
         android:title="@string/delete"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
 </menu>
