--- a/app/src/main/res/menu/menu_term.xml
+++ b/app/src/main/res/menu/menu_term.xml
@@ -5,13 +5,11 @@
     <item
         android:id="@+id/action_edit_term"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_edit"
         android:title="@string/edit"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_delete_term"
         android:orderInCategory="101"
-        android:icon="@drawable/ic_delete"
         android:title="@string/delete"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
